--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>LearnHub - Online Learning Platform</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
 
@@ -26,3 +26,4 @@
 
 </body>
 </html>
+
