--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>LearnHub - Online Learning Platform</title>
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
@@ -26,4 +27,5 @@
 
 </body>
 </html>
+
 
