--- a/courses.html
+++ b/courses.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Courses - LearnHub</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
@@ -60,3 +61,4 @@
 
 </body>
 </html>
+
