--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>FAQ - LearnHub</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
@@ -49,3 +50,4 @@
     <script src="js/faq.js"></script>
 </body>
 </html>
+
