--- a/instructors.html
+++ b/instructors.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Instructors - LearnHub</title>
-    <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
@@ -44,3 +45,4 @@
 
 </body>
 </html>
+
